Fix spacing

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -100,6 +100,10 @@ img {
     grid-gap: 2rem;
 }
 
+.projects img {
+    margin-bottom: .5rem;
+}
+
 .tag, .services-header, .callout {
     font-family: "Unica77LLSub-Bold";
 }
